# WILDKATZE-I

./: .dockerignore  .flake8  .gitignore  .pylintrc  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  documentation-build.yml  model-validation.yml  security-scan.yml
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _imp.data.json  _imp.meta.json  (+278 more)
configs/deployment/: development.yaml  edge.yaml  production.yaml
configs/evaluation/: benchmarks.yaml  compliance.yaml
configs/model/: wildkatze-28b.yaml  wildkatze-70b-research.yaml  wildkatze-7b-edge.yaml
configs/training/: finetune.yaml  pretrain.yaml  rlhf.yaml
data/: README.md
data/preprocessing/: clean_corpus.py
data/samples/: cultural_contexts.json  evaluation_sets.json  psyop_examples.json
data/schemas/: inference_request.json  training_data.json
docker/: Dockerfile.api  Dockerfile.inference  Dockerfile.training  docker-compose.yml
docs/architecture/: inference-optimization.md  model-design.md  security-architecture.md  training-pipeline.md
docs/compliance/: export-control.md  gdpr-compliance.md  geneva-conventions.md  nato-standards.md
docs/research/: ablation-studies.md  benchmarks.md  ethical-considerations.md  technical-paper.md
docs/user-guide/: api-reference.md  (+3 more)
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
models/: README.md
(+10905 files in other folders)
